# TimMcBot

./: .breakpoints  globalchat.py  keep_alive.py  main.py  pyproject.toml
extensions/: fun.py  giveaways.py  leveling.py  minigames.py  polls.py  utility.py
json_files/: 2048highscores.json  giveaways.json  globalchat.json  leveling.json  levelroles.json  polls.json  prefixes.json  rr.json
minigames/: chess.py  othello.py  tictactoe.py  viergewinnt.py
templates/: index.html  leaderboard.html  new_leaderboard.html
