[tool.poetry]
name = "timmcbot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
dhooks = "^1.1.4"
pandas = "^1.2.3"
replit = "^3.0.0"
scratchapi = "^1.4.1"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
